# iro

./: CMakeLists.txt  README.md
lib/google-mcu/: CMakeLists.txt
lib/google-mcu/cpp/palettes/: tones.cc
lib/google-mcu/cpp/scheme/: scheme_fidelity.cc
src/: colour.cpp  colour.hpp  main.cpp  palette.cpp  palette.hpp
src/engine/: colour.cpp  colour.hpp  palette.cpp  palette.hpp
src/output/: json.cpp  output.hpp  template.cpp
